--- a/sass/page elements/_subtitles.scss
+++ b/sass/page elements/_subtitles.scss
@@ -1,8 +1,14 @@
 
-#subtitles {
+#transcript {
   max-width: 700px;
   width: 75%;
   margin: 0 auto;
   color: $mainFontColor;
   font-family: $fontFam ;
+  font-size: $fontMedium;
+  cursor: pointer;
+}
+
+.highlight {
+  color: $orange;
 }
