--- a/sass/page elements/_video.scss
+++ b/sass/page elements/_video.scss
@@ -38,7 +38,14 @@
       height: 4px;
       background: $orange;
       width: 0%;
-      // border-radius: 1em;
+      position: absolute;
+      bottom: 8px;
+    }
+
+    #buffer-bar{
+      height: 4px;
+      background: darken($white, 20%);
+      width: 0%;
     }
   }
 }
@@ -60,25 +67,49 @@
     display: inline-block;
     margin: 0 5px;
     position: relative;
+    cursor: pointer;
   }
 
   #leftControls {
     align-items: center;
     display: inline-block;
     margin-right: auto;
+    width: 40%;
+
+    #play-pause {
+      cursor: pointer;
+      margin: 0 5px;
+
+      img {
+        position: relative;
+        top: 2px;
+      }
+    }
 
     #time {
-      position:relative;
-      top: -5px;
+      position:absolute;
+      top: 2px;
       // width: 400px;
       color: $white;
-      font-family: $fontFam ;
-      font-weight: 700;
+      cursor: auto;
+      width: 50%;
+      font-size: 1em;
 
+      #slash {
+        width: 5%;
+      }
 
       .timeTxt {
         display: inline-block;
+        width: 30%;
+        text-align: center;
       }
+    }
+
+    #speed {
+      color: $white;
+      top: -5px;
+      left: 45%;
     }
   }
 
@@ -98,30 +129,14 @@
     }
   }
 
-
-  #play-pause {
-    cursor: pointer;
-    margin: 0 15px;
-
-    img {
-      position: relative;
-      top: 2px;
-    }
-  }
-
   #volume-background {
     cursor: pointer;
     height: 8px;
-    // position: absolute;
     border-radius: 2em;
   	width: 100%;
     background: #eee;
-    // display: inline-block;
     padding: 0px;
     margin: 0 auto;
-    // bottom: 60px;
-    // right: 20px;
-    // display: none;
 
 
     #volume-over {
