--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
       width: 75%; } }
   #video-container h1 {
     color: #444;
+    margin: 20px 0 15px 0;
     text-align: center;
     display: none; }
     @media (min-width: 768px) {
