--- a/sass/page elements/_video.scss
+++ b/sass/page elements/_video.scss
@@ -12,6 +12,7 @@
 
   h1 {
     color: $mainFontColor;
+    margin: 20px 0 15px 0;
     text-align: center;
     display: none;
 
@@ -25,6 +26,8 @@
     width: 100%;
     display: block;
     margin: 0 auto;
+
+
   }
 }
 
