--- a/sass/page elements/_transitions.scss
+++ b/sass/page elements/_transitions.scss
@@ -1,7 +1,17 @@
 
-#video-controls {
+.video-controls {
   opacity: 1;
   @include moveTranstion($transitionWhat, $transitionSpeed, $transitionDelay, $transitionStyle);
+  bottom: 45px;
+
+  @include mQuery(mobile) {
+    opacity: 1;
+    bottom: 60px;
+  }
+}
+
+.video-controls-animate {
+  opacity: 1;
   bottom: 45px;
 
   @include mQuery(mobile) {
@@ -11,28 +21,32 @@
 }
 
 .playhead {
-
   @include moveTranstion($transitionWhat, $transitionSpeed, $transitionDelay, $transitionStyle);
-    // transition: all .4s .3s ease-in-out;
   bottom: 37px;
     @include mQuery(mobile) {
-      bottom: 12px;
-    }
-}
-
-
- #video-container:hover > #video-controls {
-  opacity: 1;
-  bottom: 45px;
-
-  @include mQuery(mobile) {
-    bottom: 60px;
+      bottom: 52px;
   }
 }
 
- #video-container:hover > .playhead {
+.playhead-animate {
    @include mQuery(mobile) {
-     bottom: 52px;
+     bottom: 12px;
    }
   bottom: 37px;
  }
+
+//  #video-container:hover > #video-controls {
+//   opacity: 1;
+//   bottom: 45px;
+//
+//   @include mQuery(mobile) {
+//     bottom: 60px;
+//   }
+// }
+//
+//  #video-container:hover > .playhead {
+//    @include mQuery(mobile) {
+//      bottom: 52px;
+//    }
+//   bottom: 37px;
+//  }
